# vposer_prior

./: .gitignore  LICENSE  MANIFEST.in  README.md  _base_conda_env.yaml  demo.py  misc_utils.py  pyproject.toml  requirements.txt  setup.py
body_model/: rigid_object_model.py
data/: smpl
data/demo_npzs/: taijiquan_female_ID0_difTraj_raw.npz
docs/: MANIFEST.in
models/: ik_engine.py  vposer_model.py
scripts/data_analysis/: vis_tene.py  vposer_latent_visualize.py
scripts/data_analysis/conf/: vposer_latent_vis.yaml
scripts/ik_post_process/: ccd_ik.py  const.py  examine_npz.py  ikpy_demo.py  load_motion_smplx.py  matrix.py  quaternion.py  smplx_lite.py  vis_util.py
scripts/images_process/: concate_gallery_np.py  concate_gallery_pil.py
scripts/installation/requirements/: base.txt  ex.txt
scripts/parallel_process/: README.md  ray_main.py
scripts/ray_cluster/: README.md  ray_cluster_inference.py  ray_cluster_with_state.py
scripts/ray_cluster/configs/: local_rtx3060_infer.yaml
scripts/tutorials/: demo.py  ik_example_joints.py  vposer.ipynb
scripts/unit_tests/: test_smpl_3d_vis.py  test_vis3d.py
src/body_visualizer/: MANIFEST.in  README.md  requirements.txt
src/body_visualizer/mesh/: mesh_viewer.py
src/human_body_prior/: model_hub.py
src/human_body_prior_v2/: model_hub.py
tests/: ik_example_mocap.py  mdm_motion2smpl.py  test_smpl_3d_vis.py  vposer_sampling.ipynb
tools/: angle_continuous_repres.py  configurations.py  rotation_tools.py  tgm_conversion.py
tutorials/: demo.py
visualizations/: training_visualization.py
(+36 files in other folders)
