[tool.poetry]
version = "2.2.2.0"
name = "human_body_prior"
description = "Variational human pose prior for human pose synthesis and estimation."
authors = ["Nima Ghorbani <nghorbani@tue.mpg.de>"]
maintainers = ["Nima Ghorbani <nghorbani@tue.mpg.de>"]
readme = "README.md"
homepage = "https://github.com/nghorbani/human_body_prior"
packages = [
    { include = "human_body_prior", from = "src" },
    { include = "body_visualizer", from = "src" },
]
include = [
    "data/support_data/*.*"
]

[tool.poetry.dependencies]
python = "^3.7"
huggingface_hub = "*"
tqdm = "*"
numpy = "*"
dotmap = "*"
PyYAML = "*"
torch = "*"
transforms3d = "*"
omegaconf = "*"
loguru = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
